// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.run.bq;

option go_package = "go.chromium.org/luci/cv/internal/run/bq;bq";


// SendRunRowTask sends a row for a completed Run to a BQ table.
//
// Queue: "bq-export".
message ExportRunToBQTask {
  string run_id = 1;
}
